rename to benchcompress

--- a/web-ui/public/404.html
+++ b/web-ui/public/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Zia Benchmark</title>
+    <title>Benchcompress</title>
     <script>
       // Single Page Apps for GitHub Pages
       // MIT License
